k8s/namespaces.yaml
# Production namespace
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    environment: production
---
# Staging namespace
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    environment: staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
---
# argocd namespace
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    app: argocd
